# smartconfig

./: CMakeLists.txt  Makefile  README.md  cpack.c  cpack.h  crc32.c  eloop.c  eloop.h  extract.h  iface.c  iface.h  main.c  mcast.c  smartconfig.c  smartconfig.h
doc/: SmartLink-for-device.doc  SmartLink-for-phone.doc  com.example.administrator.myapplication-1.apk
include/: crc32.h  smartconfig.h
smartconfig2/: CMakeLists.txt
smartconfig2/include/: cpack.h  eloop.h  extract.h  iface.h  pcap.h
smartconfig2/src/: eloop.c  iface.c  pcap.c
src/: Makefile  crc32.c  main.c  smartconfig.c
